# rc-open-jio

./: .env.example  README.md  docker-compose.local.yml  main.py  pyproject.toml  requirements.txt  vercel.json
api/: cron.py  webhook.py
app/: bot.py  config.py  constants.py  db.py  notifications.py  repository.py  telegram_api.py
db/local/: 001_local_init.sql
db/migrations/: 001_init.sql  002_profile_columns.sql  003_bot_flow_state.sql  004_event_shared_messages.sql
scripts/: local_db_setup.sh  set_webhook.py
