[project]
name = "rc-open-jio"
version = "0.1.0"
description = "Telegram bot for NUS residential events"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.116.1",
    "httpx==0.28.1",
    "psycopg[binary]==3.2.9",
    "python-dotenv==1.0.1",
    "uvicorn==0.35.0",
]

[project.scripts]
app = "main:app"
